<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settingsShowAtStart">

        <ListPreference
            app:key="startupView"
            app:title="@string/settingsChooseWhatToShow"
            app:icon="@drawable/ic_baseline_home_24"
            app:defaultValue="__trn"
            app:entryValues="@array/settingsShowAtStartupValues"
            app:entries="@array/settingsShowAtStartupStrings"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settingsSearch">
        <MultiSelectListPreference
            app:key="contentFilter"
            app:title="@string/settingsSearchContentRatingTitle"
            app:summary="@string/settingsSearchContentRatingDesc"
            app:icon="@drawable/outline_filter_alt_24"
            app:entryValues="@array/contentRatingValues"
            app:entries="@array/ratings"
            app:defaultValue="@array/contentRatingDefaultValues"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settingsChapterCategory">

        <SwitchPreferenceCompat
            app:key="chapterDuplicate"
            app:summary="@string/settingsChapterShowSameChapterDes"
            app:title="@string/settingsChapterShowSameChapter"
            app:icon="@drawable/ic_baseline_allow_duplicate_24"
            app:defaultValue="true"
            android:widgetLayout="@layout/preference_material_switch"/>
        <SwitchPreferenceCompat
            app:key="hideExternal"
            app:title="@string/settingsHideExternal"
            app:summary="@string/settingsHideExternalDescription"
            app:icon="@drawable/ic_baseline_link_off_24"
            android:widgetLayout="@layout/preference_material_switch"/>
        <MultiSelectListPreference
            app:key="languagePreference"
            app:title="@string/settingsChapterLanguageTitle"
            app:summary="@string/settingsChapterLanguageDes"
            app:icon="@drawable/ic_baseline_translate_24"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/languageEntries"
            app:entryValues="@array/languageValues"
            app:defaultValue="@array/languagesDefault"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settingsReader">

        <SwitchPreferenceCompat
            app:key="readerRTL"
            app:title="@string/settingsReaderRTL"
            app:summary="@string/settingsReaderRTLDesc"
            app:icon="@drawable/outline_reverse_arrows_24"
            android:widgetLayout="@layout/preference_material_switch"/>

        <ListPreference
            app:key="readerVolumeKeysNavigation"
            app:title="@string/settingsReaderVolumeButtons"
            app:icon="@drawable/baseline_volume_24"
            app:defaultValue="dis"
            app:entryValues="@array/settingsVolumeNavigationValues"
            app:entries="@array/settingsVolumeButtonsOptions"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settingsDownloadCategory">

        <SwitchPreferenceCompat
            app:key="dataSaver"
            app:summaryOff="@string/settingsDownloadDataSaverOff"
            app:summaryOn="@string/settingsDownloadDataSaverOn"
            app:title="@string/settingsDownloadDataSaver"
            app:icon="@drawable/ic_baseline_data_saver_on_24"
            android:widgetLayout="@layout/preference_material_switch"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settingsCoverCategory">

        <SwitchPreferenceCompat
            app:key="lowQualityCovers"
            app:summaryOff="@string/settingsLowQualityCoversOff"
            app:summaryOn="@string/settingsLowQualityCoversOn"
            app:title="@string/settingsLowQualityCovers"
            app:icon="@drawable/ic_baseline_photo_size_select_large_24"
            android:widgetLayout="@layout/preference_material_switch"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:key="info"
            app:title="@string/about"
            app:summary="@string/aboutDescription"
            app:icon="@drawable/ic_baseline_info_24" />

        <Preference
            app:key="webpage"
            app:title="@string/infoOtherProjects"
            app:summary="@string/infoOtherProjectsDescription"
            app:icon="@drawable/ic_baseline_public_24"
            >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://micheleprojects.altervista.org/projects/"
                />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>