<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    tools:context=".MangaDescriptionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdgeLength="16dp"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mangaDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defaultDescription"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/author"
                        android:textStyle="bold"
                        app:drawableTopCompat="@drawable/ink_pen_24px" />

                    <TextView
                        android:id="@+id/authorNameView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Araki Hirohiko" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/artist"
                        android:textStyle="bold"
                        app:drawableTopCompat="@drawable/brush_24px" />

                    <TextView
                        android:id="@+id/artistNameView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Araki Hirohiko" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingBottom="4dp"
                android:text="@string/contentRating"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.Chip
                android:id="@+id/contentRatingChip"
                style="@style/TagChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/genres"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/genresChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                app:chipSpacing="0dp"
                app:lineSpacing="2dp">

            </com.google.android.material.chip.ChipGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/themes"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/themesChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                app:chipSpacing="0dp">

            </com.google.android.material.chip.ChipGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingBottom="4dp"
                android:text="@string/format"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.Chip
                android:id="@+id/formatChip"
                style="@style/TagChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingBottom="4dp"
                android:text="@string/demographic"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.Chip
                android:id="@+id/demographicChip"
                style="@style/TagChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />
        </LinearLayout>
    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/clickableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/continueReading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:alpha="0.5"
                android:text="@string/continueFromBookmark"
                android:textSize="16sp"
                android:visibility="gone"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/chapterTitle"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/fetchingString"
                        android:textAlignment="gravity"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/scanlationGroup"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:alpha="0.6"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/wait" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/readIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@null"
                    android:src="@drawable/ic_baseline_auto_stories_24"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>