<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChapterDownloaderActivity">

    <ImageView
        android:id="@+id/coverBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="1"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:foreground="@drawable/gradient"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ProgressBar
        android:id="@+id/coverPlaceholder"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/cover"
        app:layout_constraintEnd_toEndOf="@+id/cover"
        app:layout_constraintStart_toStartOf="@+id/cover"
        app:layout_constraintTop_toTopOf="@+id/cover" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:transitionName="cover"
        app:layout_constraintDimensionRatio="h,2:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
        app:layout_constraintWidth_percent="0.35"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mangaInfoContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cover"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar">

        <TextView
            android:id="@+id/mangaTitle"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:gravity="start"
            android:maxLines="3"
            android:text="@string/noMangaSelected"
            android:textSize="34sp"
            android:textStyle="bold"
            android:transitionName="title"
            app:autoSizeMaxTextSize="36sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/authorView"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start|top"
            android:isScrollContainer="true"
            android:overScrollMode="ifContentScrolls"
            android:scrollbars="vertical"
            android:text="@string/noMangaSelected"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:transitionName="author"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mangaTitle"
            app:layout_constraintTop_toBottomOf="@+id/mangaTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover"
        app:tabUnboundedRipple="true">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/description_24px"
            android:text="@string/sectionOverview" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/chapter_list"
            android:text="@string/sectionChapters" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/related"
            android:text="@string/sectionRelated" />
    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabSelection" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>